--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: 
+url: https://kfarr11.github.io
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: 
+baseurl: /demo-herbarium-sheets/
 # location of code, the full url to your github repository
-source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
+source-code: https://github.com/kfarr11/demo-herbarium-sheets/
 
 ##########
 # SITE SETTINGS
