--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ source-code: https://github.com/kfarr11/demo-herbarium-sheets/
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Herbarium Sheets at the College of Wooster
+title: Herbarium Sheets
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Learning CollectionBuilder at DHSI 2024
+tagline: biologic preservation at the College of Wooster
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Herbarium Sheets Collection was created and donated by Mary Ronsheim, in 1950 when she was a student at the College of Wooster. The sheets in this collection preserve leaves taken from the College of Wooster campus and nearby locations in the Wooster, OH community. This collection will be of particular interest to those interested in regional history, biology, and dendrology. All sheets were collected during the Fall semester of 1950, between September and November."
