--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Herbarium Sheets
 tagline: biologic preservation at the College of Wooster
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "The Herbarium Sheets Collection was created and donated by Mary Ronsheim, in 1950 when she was a student at the College of Wooster. The sheets in this collection preserve leaves taken from the College of Wooster campus and nearby locations in the Wooster, OH community. This collection will be of particular interest to those interested in regional history, biology, and dendrology. All sheets were collected during the Fall semester of 1950, between September and November."
+description: "The Herbarium Sheets Collection was created and donated by Mary Ronsheim, in 1950, when she was a student at the College of Wooster. The sheets in this collection preserve leaves taken from the College of Wooster campus and nearby locations in the Wooster, OH community. This collection will be of particular interest to those interested in regional history, biology, and dendrology. All sheets were collected during the Fall semester of 1950, between September and November."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: ohio;history;biology
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
